update for day 7
